--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 dist: trusty
+sudo: true
 language: java
-
-jdk:
-  - oraclejdk8
+jdk: oraclejdk8
+before_install:
+  - chmod +x mvnw
 
 script: mvn clean install
